--- a/bookmymovie/pom.xml
+++ b/bookmymovie/pom.xml
@@ -45,6 +45,16 @@
 			<artifactId>flyway-core</artifactId>
 			<version>9.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
