--- a/bookmymovie/src/main/resources/application.yml
+++ b/bookmymovie/src/main/resources/application.yml
@@ -1,9 +1,14 @@
-server.port: 8090
-spring.h2.console.enabled: true
-spring.mvc.path match.matching-strategy: ant-path-matcher
+server.port: 2022
 
-spring.datasource.url: jdbc:mysql://localhost/bookmymovie?verifyServerCertificate=false&useSSL=true
-spring.datasource.username: root
-spring.datasource.password: sanjaiKing@2022
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
-spring.jpa.generate-ddl: true
+spring:
+  database-platform=org:
+    hibernate:
+      dialect: MySQL5InnoDBDialect
+
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost/movie_ticket_booking
+    username: root
+    password: siva2001
+
+
