Movie-Ticket-Booking:     User and role controller with crud's

--- a/bookmymovie/src/main/resources/application.yml
+++ b/bookmymovie/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server.port: 8090
 
 spring:
@@ -9,6 +10,4 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost/movie_ticket_booking
     username: root
-    password: siva2001
-
-
+    password: sanjaiKing@2022
