--- a/bookmymovie/src/main/resources/application.yml
+++ b/bookmymovie/src/main/resources/application.yml
@@ -4,10 +4,9 @@ spring:
   database-platform=org:
     hibernate:
       dialect: MySQL5InnoDBDialect
-
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/movie_ticket_booking
+    url: jdbc:mysql://localhost:3306/movie_ticket_booking
     username: root
     password: harini@04
 
