Movie_Ticket_Booking:     - Code changes

--- a/bookmymovie/src/main/resources/application.yml
+++ b/bookmymovie/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 
-spring.mvc.pathmatch.matching-strategy : ant_path_matcher
+#spring.mvc.pathmatch.matching-strategy : ant_path_matcher
 server.port: 8090
 
 spring:
@@ -10,11 +10,8 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie_ticket_booking
     username: root
-<<<<<<< HEAD
-    password: sanjaiKing@2022
-=======
     password: harini@04
->>>>>>> f9bd7e9 (Movie_Ticket_Booking:)
+
 
 #    Set flyway:
 #      Outoforder: true
