--- a/bookmymovie/src/main/resources/application.yml
+++ b/bookmymovie/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 
 #spring.mvc.pathmatch.matching-strategy : ant_path_matcher
-server.port: 8090
+server.port: 8020
 
 spring:
   database-platform=org:
@@ -10,7 +10,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movie_ticket_booking
     username: root
-    password: harini@04
+    password: dhanesh@22
 
 
 #    Set flyway:
