--- a/bookmymovie/src/main/resources/application.yml
+++ b/bookmymovie/src/main/resources/application.yml
@@ -3,17 +3,20 @@
 server.port: 8020
 
 spring:
+  flyway:
+    outOfOrder: true
   database-platform=org:
     hibernate:
       dialect: MySQL5InnoDBDialect
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/movie_ticket_booking
+    url: jdbc:mysql://localhost:3306/ticket_booking
     username: root
-    password: dhanesh@22
+    password: siva2001
 
 
-#    Set flyway:
-#      Outoforder: true
+
+
+
 
 
