Online-Movie-Booking:     Refractoring

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,9 @@ spring:
     username: root
     password: siva2001
 
-
-
+# Redis configuration
+  spring.redis.host: localhost
+  spring.redis.port: 8020
 
 
 
