--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,23 @@
 
-#spring.mvc.pathmatch.matching-strategy : ant_path_matcher
 server.port: 8020
 
 spring:
-  flyway:
-    outOfOrder: true
-  database-platform=org:
-    hibernate:
-      dialect: MySQL5InnoDBDialect
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ticket_booking
+    url: jdbc:mysql://localhost/ticket_booking
     username: root
     password: siva2001
 
-# Redis configuration
-  spring.redis.host: localhost
-  spring.redis.port: 8020
+  jpa:
+    hibernate.ddl-auto: update
+    show_sql: true
+    use_sql_comments: true
+    format_sql: true
+    event:
+      merge:
+        entity_copy_observer: allow
+    database-platform=org:
+      hibernate:
+        dialect: MySQL5InnoDBDialect
 
 
 
