Online-Movie-Booking:     Booking and ticket flow

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-
+spring.mvc.pathmatch.matching-strategy: ant_path_matcher
 server.port: 8020
 
 spring:
@@ -6,15 +6,6 @@ spring:
     url: jdbc:mysql://localhost/ticket_booking
     username: root
     password: dhanesh@22
-
-  jpa:
-    hibernate.ddl-auto: update
-    show_sql: true
-    use_sql_comments: true
-    format_sql: true
-    event:
-      merge:
-        entity_copy_observer: allow
     database-platform=org:
       hibernate:
         dialect: MySQL5Dialect
