--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,22 @@
 		<artifactId>springfox-swagger-ui</artifactId>
 		<version>2.9.2</version>
 	</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+        <!--<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.7.3</version>
+        </dependency>-->
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
