--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server.port: 2022
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost/booking
+    url: jdbc:mysql://localhost/ticket_booking
     username: root
-    password: dhanesh@22
+    password: harini@04
 
   jpa:
     hibernate.ddl-auto: update
