--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server.port: 2022
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost/booking
+    url: jdbc:mysql://localhost/ticket_booking
     username: root
     password: siva2001
 
