--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,15 @@
-
 spring.mvc.pathmatch.matching-strategy: ant_path_matcher
 server.port: 2022
 
 spring:
+  database-platform=org:
+    hibernate:
+      dialect: MySQL5InnoDBDialect
   datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost/ticket_booking
     username: root
-    password: siva2001
-
-  jpa:
-    hibernate.ddl-auto: update
-    show_sql: true
-    use_sql_comments: true
-    format_sql: true
-    event:
-      merge:
-        entity_copy_observer: allow
-    database-platform=org:
-      hibernate:
-        dialect: MySQL5InnoDBDialect
-
+    password: dhanesh@22
   main:
     allow-circular-references: true
 
