--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,22 @@
 spring.mvc.pathmatch.matching-strategy: ant_path_matcher
 server.port: 2022
-
 spring:
+  jpa:
+    hibernate.ddl-auto: update
+    show_sql: true
+    use_sql_comments: true
+    format_sql: true
+    event:
+      merge:
+        entity_copy_observer: allow
   database-platform=org:
     hibernate:
       dialect: MySQL5InnoDBDialect
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/ticket_booking
+    url: jdbc:mysql://localhost/book_movie
     username: root
-    password: harini@04
+    password: dhanesh@22
   main:
     allow-circular-references: true
 
