--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost/book
     username: root
-    password: dhanesh@22
+    password: siva2001
   main:
     allow-circular-references: true
 
