--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,19 @@ spring.mvc.pathmatch.matching-strategy: ant_path_matcher
 server.port: 2022
 spring:
   database-platform=org:
+    cache:
+      type: redis
+    redis:
+      host: localhost
+      port: 6379
+      password: hari@04
     hibernate:
       dialect: MySQL5InnoDBDialect
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/book
+    url: jdbc:mysql://localhost/book_movies
     username: root
-    password: dhanesh@22
+    password: harini@04
   main:
     allow-circular-references: true
 
