--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,11 @@ spring:
       dialect: MySQL5InnoDBDialect
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/book
+    url: jdbc:mysql://localhost/tk
+
     username: root
-    password: dhanesh@22
+    password: siva2001
+
   main:
     allow-circular-references: true
 
